--- a/src/main/resources/templates/modalClientes.html
+++ b/src/main/resources/templates/modalClientes.html
@@ -1,11 +1,12 @@
 
 <!-- Modal Structure -->
 <div id="modalCliente" class="modal modal-fixed-footer">
-	<h4>Clientes</h4>
 	<form class="col s12" th:object="${pessoa}" th:action="@{/clientes}"
 		method="post">
 		<div class="modal-content">
+			<h4>Clientes</h4>
 			<div class="row">
+				<input type="hidden" th:field="*{id}" />
 				<div class="input-field col s6">
 					<input id="icon_prefix" type="text" class="validate"
 						th:field="*{nome}" /> <label>Nome</label>
