--- a/src/main/resources/templates/funcionarios.html
+++ b/src/main/resources/templates/funcionarios.html
@@ -39,15 +39,11 @@
 				</thead>
 
 				<tbody>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
+					<tr th:each="funcionario : ${listaFuncionarios}">
+						<td th:text="${funcionario.nome}"></td>
+						<td th:text="${funcionario.cpf}"></td>
+						<td th:text="${funcionario.rg}"></td>
+						<td th:text="${funcionario.email}"></td>
 					</tr>
 
 				</tbody>
