--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 						<div class="divider"></div>
 					</div></li>
 				<li></li>
-				<li class="bold"><a href="#" class="waves-effect waves-teal">Atendimento</a>
+				<li class="bold"><a th:href="@{/atendimento}" class="waves-effect waves-teal">Atendimento</a>
 					<div class="divider"></div></li>
 				<li class="bold"><a th:href="@{/clientes}"
 					class="waves-effect waves-teal">Clientes</a>
