--- a/src/main/resources/templates/funcionarios.html
+++ b/src/main/resources/templates/funcionarios.html
@@ -9,7 +9,7 @@
 			<div class="row">
 				<form class="cols s12" style="margin-left: -56px;">
 					<div class="input-field col s4">
-						<i class="material-icons prefix"></i> <input id="icon_prefix"
+						<i class="material-icons prefix"></i> <input name="nomeBusca" id="icon_prefix"
 							type="text" placeholder="Qual funcionário deseja buscar?" />
 					</div>
 					<div class="col s2" style="margin-top: 20px;">
@@ -44,6 +44,8 @@
 						<td th:text="${funcionario.cpf}"></td>
 						<td th:text="${funcionario.rg}"></td>
 						<td th:text="${funcionario.email}"></td>
+						<td th:text="${funcionario.cargoId.nome}"></td>
+						
 					</tr>
 
 				</tbody>
