--- a/src/main/resources/templates/funcionarios.html
+++ b/src/main/resources/templates/funcionarios.html
@@ -7,9 +7,10 @@
 		<div class="row">
 			<h2 class="header">Funcionários</h2>
 			<div class="row">
+				<div th:include="mensagem"></div>
 				<form class="cols s12" style="margin-left: -56px;">
 					<div class="input-field col s4">
-						<i class="material-icons prefix"></i> <input name="nomeBusca" id="icon_prefix"
+						<i class="material-icons prefix"></i> <input id="icon_prefix"
 							type="text" placeholder="Qual funcionário deseja buscar?" />
 					</div>
 					<div class="col s2" style="margin-top: 20px;">
@@ -18,7 +19,7 @@
 				</form>
 
 				<div class="fixed-action-btn horizontal">
-					<a class="btn-floating btn-large red"
+					<a class="btn-floating btn-large red" id="btnCadastroFuncionario"
 						data-target="modalFuncionarios"> <i
 						class="large material-icons">mode_edit</i>
 					</a>
@@ -35,6 +36,7 @@
 						<th>RG</th>
 						<th>E-mail</th>
 						<th>Cargo</th>
+						<th class="material-icons center-align">settings</th>
 					</tr>
 				</thead>
 
@@ -44,14 +46,19 @@
 						<td th:text="${funcionario.cpf}"></td>
 						<td th:text="${funcionario.rg}"></td>
 						<td th:text="${funcionario.email}"></td>
-						<td th:text="${funcionario.cargoId.nome}"></td>
-						
+						<td th:text="${funcionario.cargo.nome}"></td>
+						<td><a class="excluir"
+							th:href="@{funcionarios/excluir/{id} (id=${funcionario.id})}"><i
+								class="material-icons">delete</i></a> <a class="alterar" href="#"
+							th:onclick="'javascript:buscarFuncionarioEditar(\''+ ${funcionario.id} +'\')'"><i
+								class="material-icons">mode_edit</i></a></td>
 					</tr>
 
 				</tbody>
 			</table>
 		</div>
 		<div th:include="modalFuncionarios"></div>
+		<script type="text/javascript" th:src="@{js/funcionarios.js}"></script>
 	</section>
 
 </div>
