Subindo alteraçoes relativas ao atendimento

--- a/src/main/resources/templates/atendimento.html
+++ b/src/main/resources/templates/atendimento.html
@@ -3,9 +3,10 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="index">
 	<section layout:fragment="content">
-		<div class="col s12" th:if="${!#lists.isEmpty(listaAtendimento)}">
+		<h2 class="header">Atendimento</h2>
+		
+		<div class="col s12" >
 			<div class="carousel col s6">
-
 				<p>
 				<h4 class="fonte-verde">Normal</h4>
 				</p>
