Alterando view de atendimentos, alterando o metodo de finalizaçao do atendimento

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -35,3 +35,12 @@
 .fonte-verde {
 	color: #00e676;
 }
+
+/* .carousel .carousel-item {
+	display: none;
+	width: 259px;
+	height: 246px;
+	position: absolute;
+	top: 0;
+	left: 0;
+} */
