--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 
 				<li><div class="userView green accent-1">
 
-						<img class="circle" src="images/cachorro.jpg"></img><span>John
+						<img class="circle" th:src="@{images/cachorro.jpg}"></img><span>John
 							Doe</span><br></br> <span>jdandturk@gmail.com</span>
 						<div class="divider"></div>
 					</div></li>
