--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 		<div class="nav-wrappe ">
 			<a href="#" class="brand-logo"></a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="#"><i class="material-icons">input</i></a></li>
+				<li><a href="#"><i id="logout" class="material-icons">input</i></a></li>
 			</ul>
 		</div>
 	</nav>
