--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/materialize.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery-mask-min.js}"></script>
 </head>
 
 <body>
