--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,8 @@
 				<li class="bold"><a th:href="@{/funcionarios}"
 					class="waves-effect waves-teal">Funcionários</a>
 					<div class="divider"></div></li>
-				<li class="bold"><a href="#" class="waves-effect waves-teal">Relatórios</a>
+				<li class="bold"><a th:href="@{/relatorios}"
+					class="waves-effect waves-teal">Relatórios</a>
 					<div class="divider"></div></li>
 			</ul>
 		</div>
