--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/materialize.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/script.js}"></script>
+<script type="text/javascript" th:src="@{/js/jquery-mask-min.js}"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
 		<div class="nav-wrappe ">
 			<a href="#" class="brand-logo"></a>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="#"><i class="material-icons">input</i></a></li>
+				<li><a href="#"><i id="logout" class="material-icons">input</i></a></li>
 			</ul>
 		</div>
 	</nav>
