--- a/src/main/resources/templates/modalClientes.html
+++ b/src/main/resources/templates/modalClientes.html
@@ -12,7 +12,7 @@
 						th:field="*{nome}" placeholder="Nome" required="required" /> <label>Nome</label>
 				</div>
 				<div class="input-field col s3">
-					<input type="text" class="validate" placeholder="CPF"
+					<input type="text" class="validate" placeholder="CPF" minlength="11" maxlength="11"
 						th:field="*{cpf}" id="clienteCpf" required="required" /> <label>CPF</label>
 				</div>
 				<div class="input-field col s3">
